molgenisinstallation.sh